svc training added

--- a/demo/run_model.ipynb
+++ b/demo/run_model.ipynb
@@ -20,55 +20,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "### say we want to predict binding likelihood of CA\n",
-    "model_CA = joblib.load(f'{parent_dir}/weight3/one_class_svm_CA_nu_0.1_roc_0.72.pkl')"
+    "model_CA = joblib.load(f'{parent_dir}/weight3/one_class_svm_CA_nu_0.1_roc_0.72.pkl')\n",
+    "model_CA = joblib.load(f'{parent_dir}/weight4/svm_svc_CA_roc_0.81.pkl')\n",
+    "model_ZN  = joblib.load(f'{parent_dir}/weight3/one_class_svm_ZN_nu_0.0447_roc_0.794.pkl')\n",
+    "model_ZN = joblib.load(f'{parent_dir}/weight4/svm_svc_ZN_roc_0.873.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "> \u001b[0;32m/home/lhtran/class/scaffold_squad/utils/util.py\u001b[0m(665)\u001b[0;36mget_X_data\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m    664 \u001b[0;31m    \u001b[0mipdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m--> 665 \u001b[0;31m    \u001b[0mX_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_data_NN_atoms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_data_l2d\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_data_van_der_waals_radius\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_data_electronegativity\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_data_unshared_electron\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_data_valency\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m    666 \u001b[0;31m    \u001b[0;31m# y_data = np.ones(np.shape(X_data)[0]) # one class positive data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "test_pdb = '/home/lhtran/class/scaffold_squad/datasets/rotamer_motif/7MCI_1.pdb'\n",
-    "pdb_data = util.preprocess_tip_atom(test_pdb, metal='CA')#, metal_id=15859)\n",
-    "pdb_data = np.reshape(pdb_data, (1, -1))"
+    "test_pdb = '/home/lhtran/class/scaffold_squad/test_cases/test_CA_1.pdb'\n",
+    "pdb_data = util.preprocess_tip_atom(test_pdb, metal='CA',metal_id=9)#, metal_id=15859)\n",
+    "pdb_data = pdb_data.reshape(1, -1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1])"
+       "array([1.])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model_CA.predict(pdb_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tmp = np.array([  1.        ,   1.        ,   1.        ,   1.        ,\n",
+    "#          0.        ,   0.        ,   0.        ,   0.        ,\n",
+    "#          2.35129929,   2.40874028,   2.59298944,   2.70946288,\n",
+    "#          0.        ,   0.        ,   0.        ,   0.        ,\n",
+    "#        152.        , 152.        , 152.        , 152.        ,\n",
+    "#          0.        ,   0.        ,   0.        ,   0.        ,\n",
+    "#          3.44      ,   3.44      ,   3.44      ,   3.44      ,\n",
+    "#          0.        ,   0.        ,   0.        ,   0.        ,\n",
+    "#          4.        ,   4.        ,   4.        ,   4.        ,\n",
+    "#          0.        ,   0.        ,   0.        ,   0.        ,\n",
+    "#          6.        ,   6.        ,   6.        ,   6.        ,\n",
+    "#          0.        ,   0.        ,   0.        ,   0.        ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp = tmp.reshape(1, -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_pdb = '/home/lhtran/class/scaffold_squad/test_cases/test_ZN_1.pdb'\n",
+    "pdb_data = util.preprocess_tip_atom(test_pdb, metal='ZN',metal_id=1)#, metal_id=15859)\n",
+    "pdb_data = np.reshape(pdb_data, (1, -1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_ZN.predict(pdb_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  1.        ,   1.        ,   1.        ,   1.        ,\n",
+       "          1.        ,   1.        ,   0.        ,   0.        ,\n",
+       "          3.2110846 ,   2.85012937,   2.90439034,   2.849967  ,\n",
+       "          3.21100187,   2.90426397,   0.        ,   0.        ,\n",
+       "        170.        , 152.        , 152.        , 152.        ,\n",
+       "        170.        , 152.        ,   0.        ,   0.        ,\n",
+       "          2.55      ,   3.44      ,   3.44      ,   3.44      ,\n",
+       "          2.55      ,   3.44      ,   0.        ,   0.        ,\n",
+       "          0.        ,   4.        ,   4.        ,   4.        ,\n",
+       "          0.        ,   4.        ,   0.        ,   0.        ,\n",
+       "          4.        ,   6.        ,   6.        ,   6.        ,\n",
+       "          4.        ,   6.        ,   0.        ,   0.        ]])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pdb_data"
    ]
   }
  ],
