--- a/demo/run_model.ipynb
+++ b/demo/run_model.ipynb
@@ -20,20 +20,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "### say we want to predict binding likelihood of CA\n",
-    "model_CA = joblib.load(f'{parent_dir}/weight3/one_class_svm_CA_nu_0.1_roc_0.72.pkl')\n",
+    "#model_CA = joblib.load(f'{parent_dir}/weight3/one_class_svm_CA_nu_0.1_roc_0.72.pkl')\n",
     "model_CA = joblib.load(f'{parent_dir}/weight4/svm_svc_CA_roc_0.81.pkl')\n",
-    "model_ZN  = joblib.load(f'{parent_dir}/weight3/one_class_svm_ZN_nu_0.0447_roc_0.794.pkl')\n",
-    "model_ZN = joblib.load(f'{parent_dir}/weight4/svm_svc_ZN_roc_0.873.pkl')"
+    "model_ZN = jobl`ib.load(f'{parent_dir}/weight4/svm_svc_ZN_roc_0.873.pkl')\n",
+    "model_MG = joblib.load(f'{parent_dir}/weight4/svm_svc_MG_roc_0.962.pkl')\n",
+    "model_K = joblib.load(f'{parent_dir}/weight4/svm_svc_K_roc_0.929.pkl')\n",
+    "model_NA = joblib.load(f'{parent_dir}/weight4/svm_svc_NA_roc_0.871.pkl')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +55,7 @@
        "array([1.])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,93 +66,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# tmp = np.array([  1.        ,   1.        ,   1.        ,   1.        ,\n",
-    "#          0.        ,   0.        ,   0.        ,   0.        ,\n",
-    "#          2.35129929,   2.40874028,   2.59298944,   2.70946288,\n",
-    "#          0.        ,   0.        ,   0.        ,   0.        ,\n",
-    "#        152.        , 152.        , 152.        , 152.        ,\n",
-    "#          0.        ,   0.        ,   0.        ,   0.        ,\n",
-    "#          3.44      ,   3.44      ,   3.44      ,   3.44      ,\n",
-    "#          0.        ,   0.        ,   0.        ,   0.        ,\n",
-    "#          4.        ,   4.        ,   4.        ,   4.        ,\n",
-    "#          0.        ,   0.        ,   0.        ,   0.        ,\n",
-    "#          6.        ,   6.        ,   6.        ,   6.        ,\n",
-    "#          0.        ,   0.        ,   0.        ,   0.        ])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tmp = tmp.reshape(1, -1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_pdb = '/home/lhtran/class/scaffold_squad/test_cases/test_ZN_1.pdb'\n",
+    "test_pdb = '/home/lhtran/class/scaffold_squad/test_cases/test_ZN_2.pdb'\n",
     "pdb_data = util.preprocess_tip_atom(test_pdb, metal='ZN',metal_id=1)#, metal_id=15859)\n",
     "pdb_data = np.reshape(pdb_data, (1, -1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-1])"
+       "(array([1.]), array([-1.]))"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_ZN.predict(pdb_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  1.        ,   1.        ,   1.        ,   1.        ,\n",
-       "          1.        ,   1.        ,   0.        ,   0.        ,\n",
-       "          3.2110846 ,   2.85012937,   2.90439034,   2.849967  ,\n",
-       "          3.21100187,   2.90426397,   0.        ,   0.        ,\n",
-       "        170.        , 152.        , 152.        , 152.        ,\n",
-       "        170.        , 152.        ,   0.        ,   0.        ,\n",
-       "          2.55      ,   3.44      ,   3.44      ,   3.44      ,\n",
-       "          2.55      ,   3.44      ,   0.        ,   0.        ,\n",
-       "          0.        ,   4.        ,   4.        ,   4.        ,\n",
-       "          0.        ,   4.        ,   0.        ,   0.        ,\n",
-       "          4.        ,   6.        ,   6.        ,   6.        ,\n",
-       "          4.        ,   6.        ,   0.        ,   0.        ]])"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pdb_data"
+    "model_ZN.predict(pdb_data), model_NA.predict(pdb_data)"
    ]
   }
  ],
